百度基础任务七七

--- a/任务七/index.html
+++ b/任务七/index.html
@@ -220,14 +220,7 @@
 			</div>
 		</div>
 	</body>
-	<script>
-		$(".mask_4 >ul>li").eq(1).find("div").children("ul").children("li").mouseover(function(){
-		var a=$(this).index()+2
+	<script src="js/index.js">
 		
-			$(this).css("background-color","#BFBFBE").siblings().css("background-color","#F5F5F5")
-			
-		
-			$(".mask_4 ul li").eq(0).find(" div").animate({backgroundPositionY:"650px"},500).css({"background":"url(./img/"+a+".png)","background-size":"100% 100%"})
-		})
 	</script>
 </html>
