--- a/JS任务五/index.html
+++ b/JS任务五/index.html
@@ -14,13 +14,19 @@
 		
 		<ul id="list">
 	    <li>30</li>
-	 
 		</ul>
+		
 		<div>
 		<input type="text"  id="input" />
 		<input id="in1" type="button" value="增加"/>
 		<input id="re" type="button" value="排序"/>
+		<button id="bt1" >左侧入</button>
+		<button id="bt2" >右侧入</button>
+		<button id="bt3" >左侧出</button>
+		<button id="bt4" >右侧出</button>
 		</div>
 	</body>
+	<script>
 	
+	</script>
 </html>
