--- a/会动的简历/index.html
+++ b/会动的简历/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
+		<script src="js/index.js"></script>
 	</head>
 	
 	<body>
@@ -18,8 +19,5 @@
 	</div>	
 	<div id="img"></div>
 	</body>
-	<script src="js/index.js">
-
-
-	</script>
+	
 </html>
