--- a/百度糯米学院3D轮播/index.html
+++ b/百度糯米学院3D轮播/index.html
@@ -55,7 +55,7 @@
    
     .cube:hover .bottom-pane{background: black;}
  .cube .front-pane{
- 	-webkit-animation:cubfont 4s;
+ 	-webkit-animation:cubfont 4s infinite;
     -webkit-transform: translateZ(100px);
  }	
  @-webkit-keyframes cubfont{
@@ -66,7 +66,7 @@
 	
 	-webkit-transform-origin: bottom right;
 	-webkit-transform:rotateY(-90deg) translateX(100px);
-	-webkit-animation: cubright 4s 4s;
+	-webkit-animation: cubright 4s 4s infinite;
 	
 }
 @-webkit-keyframes cubright{
@@ -76,7 +76,7 @@
  .cube .back-pane{
 
  	-webkit-transform: translateZ(-100px) rotateY(-180deg);
-    -webkit-animation: cubback 4s 8s;
+    -webkit-animation: cubback 4s 8s infinite;
  }
  @-webkit-keyframes cubback{
  	from{-webkit-transform: translateZ(-10px) rotateY(-90deg);}
@@ -85,7 +85,7 @@
  .cube .left-pane{
  	-webkit-transform-origin:left bottom;
  	-webkit-transform: rotateY(90deg) translateX(-100px);
- 	-webkit-animation: cubleft 4s 12s;
+ 	-webkit-animation: cubleft 4s 12s infinite;
  }
  @-webkit-keyframes cubleft{
 		from{-webkit-transform-origin: left bottom; -webkit-transform:rotateY(-0deg) translateX(0px);}
@@ -94,7 +94,7 @@
 	.cube .bottom-pane{
 		-webkit-transform-origin: bottom center;
 		-webkit-transform: rotateX(-90deg)translateY(100px);;
-		-webkit-animation: cubbottm 4s 16s;
+		-webkit-animation: cubbottm 4s 16s infinite;
 	
 	}
 	@-webkit-keyframes cubbottm{
@@ -105,7 +105,7 @@
 	.cube .top-pane{
 		-webkit-transform-origin: top center;
 		-webkit-transform: rotateX(90deg)translateY(-100px);
-		-webkit-animation: cubtop 4s 20s;
+		-webkit-animation: cubtop 4s 20s infinite;
 		
 	}
 	@-webkit-keyframes cubtop{
