--- a/xxoo/index.html
+++ b/xxoo/index.html
@@ -10,6 +10,7 @@
 <link rel='stylesheet' href='http://www.51bbw.cn/showlist/songhua/css/55c16dda0001113100000000.css' />
 </head>
 <style>
+#auto{display: none;}
 #saycontent{
 	width:385px !important;
 }
@@ -21,7 +22,7 @@
 }
 </style>
 <body>
-<audio src="img/薛明媛,朱贺 - 非酋.mp3" loop="loop" autoplay="autoplay"></audio>
+
 <div id="saycontent" style="display: none;" >
 <span class="space">t</span>
 <br>
@@ -102,7 +103,7 @@
     	
 <link rel="stylesheet" href="http://i.51bbw.cn/mp3/css/cuplayer.css">
 				 <div style="position:absolute; top:50px; right:50px;">
-      
+       <iframe id="auto" frameborder="no" border="0" marginwidth="0" marginheight="0" src="//music.163.com/outchain/player?type=2&id=489506275&auto=1&height=66"></iframe>
         <a class="c-white fs-12 icon-play rotate" id="btn-play" href="javascript:void(0);"></a>
     </div>
 	
