--- a/xxoo/index.html
+++ b/xxoo/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+﻿<html lang="en">
   <head>
  <title>  你好</title>
 <meta name="keywords" content="" />
@@ -8,6 +8,7 @@
 <link rel='stylesheet' href='http://www.51bbw.cn/showlist/songhua/css/55c16dab0001286100000000.css' />
 <link rel='stylesheet' href='http://www.51bbw.cn/showlist/songhua/css/55c16dc00001fa1a00000000.css' />
 <link rel='stylesheet' href='http://www.51bbw.cn/showlist/songhua/css/55c16dda0001113100000000.css' />
+<script src="//api.html5media.info/1.1.8/html5media.min.js"></script>
 </head>
 <style>
 #auto{display: none;}
