--- a/xxoo/index.html
+++ b/xxoo/index.html
@@ -1,6 +1,6 @@
-﻿<html lang="en">
+<html lang="en">
   <head>
- <title>  你好</title>
+ <title>hello Miss ting</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 	<link rel="stylesheet" href="http://www.51bbw.cn/showlist/songhua/css/style.css" type="text/css"></link>
@@ -25,11 +25,15 @@
 <body>
 
 <div id="saycontent" style="display: none;" >
-<span class="space">t</span>
+<span class="space">黄婷~</span>
 <br>
-<div class="cd"><span class="space">因为有你  我的生活都是满满幸福的味道，我们一起疯过 一起闹过，一起留下了只属于我们两个人的足迹，如果你的一生需要有人捧在手上，那个人只能是我 也必须是我，虽然我现在可能什么都没有，但我有一颗真诚的心 和给你未来幸福的坚实承诺，在今后的路上 我会抓紧你的手走过风风雨雨，我愿意用自己的心，好好的陪着你，爱着你，无论现在还是将来，无论狂风，无论暴雨，我想我这里永远会是你最温暖的港湾，都是为你遮风挡雨的城墙，我会好好陪在你身边，不会让你感受到丝毫的担心和惶恐，我会珍惜和你在一起的每一刻，每一分，每一秒。</span></div>
+<div class="cd"><span class="space">我喜欢你 这是我说的第一句话 。 潜移默化的喜欢，没有具体时间 或许从看见你的第一眼、 听到你的第一声开始。</br>
+我想陪伴你 第二句话。你笑起来的时候很好看，真的!我希望每天看到你笑。生活很长 以后遇到的困难也会很多，但只要你原意 我都能陪你一起度过，而且是笑着的 由心的。<br>
+我想照顾你 第三句。虽然我做饭不如你 或许会放盐多 或许会糊。但在你生病不舒服的时候 至少也能吃上热饭，我会看着你吃 直到洗碗。。<br>
+不管是我自作多情也好 一厢情愿也好。但遗憾是比失败更加令人难受的。被人喜欢是幸福的 喜欢一个是美好的。</br>
+所以最后一句: 希望你快乐。。。</span></div>
 <br/>
-<span class="space">a </span>
+<span class="space">王港 2017/8/27</span>
 </div>
 <div id='content'>
     <ul class='content-wrap'>
@@ -93,7 +97,7 @@
                 <li class="stars5"></li>
                 <li class="stars6"></li>
             </ul>
-            <div class="logo">  你好</div>
+            <div class="logo">hello Miss 婷</div>
             <div class="terminal"></div>
         </li>
     </ul>
@@ -131,7 +135,6 @@
                 $(this).addClass('rotate');
             }
         });
-
     })
     </script>
 	
@@ -142,12 +145,11 @@
 <script type="text/javascript" src="http://www.51bbw.cn/showlist/songhua/js/55c16c910001e21b00000000.js"></script>
 <script type="text/javascript" src="http://www.51bbw.cn/showlist/songhua/js/typewriting.min.js"></script>
 <script type="text/javascript">
-
 $(function(){
 	var str= $("#saycontent").html();
 	setTimeout( function(){
 		$('.terminal').typewriting(str, {
-			"typing_interval": 300,
+			"typing_interval": 400,
 			"blink_interval": "1s",
 			"cursor_color": "#FFFFFF"
 		}, function() {
